update End point

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -6,7 +6,7 @@
         type="email"
         placeholder="Email"
         pInputText
-        formControlName="email"
+        formControlName="name"
       />
     </div>
 
